Kortade ner unika id't lite. jbbr med ändra func..

--- a/Medlemsregister/css/style.css
+++ b/Medlemsregister/css/style.css
@@ -20,3 +20,13 @@ display: block;
 	line-height: 20px;
 	margin-bottom: 10px;
 }
+#boxForChange {
+	position: fixed;
+	width: 40%;
+	height: 450px;
+	background-color: whitesmoke;
+	margin: 0 auto;
+	display: block;
+	left: calc( 50% - 22% );
+	top: calc(50% - 25%);
+}
