--- a/Medlemsregister/css/style.css
+++ b/Medlemsregister/css/style.css
@@ -50,6 +50,7 @@ display: block;
 	top: calc(50% - 25%);
 	padding: 15px;
 	font-family: sans-serif;
+	overflow: auto;
 }
 #regform h1 {
 	margin-top: 3px;
@@ -74,4 +75,10 @@ width: 40%;
 max-height: 100%;
 padding-bottom: 10px;
 padding-top: 5px;
+}
+#xButton{
+	position: absolute;
+	right: 0px;
+	margin: 5px;
+	top: 0px;
 }
