--- a/Medlemsregister/css/style.css
+++ b/Medlemsregister/css/style.css
@@ -1,6 +1,7 @@
 body {
 	background-color: red;
 	font-family: sans-serif;
+	margin: 0;
 }
 
 input {
@@ -70,15 +71,58 @@ margin-bottom: 5px;
 }
 
 #membersDiv {
-background-color: rgb(255, 108, 108);
-width: 40%;
-max-height: 100%;
-padding-bottom: 10px;
-padding-top: 5px;
+	background-color: rgb(255, 108, 108);
+	width: 40%;
+	max-height: 100%;
+	padding-bottom: 10px;
+	padding-top: 5px;
+	position: absolute;
+	left: 20%;
+	z-index: 5;
+	overflow: visible;
+	animation: myfirst 5s;
+	-webkit-animation: memberListAnimation 0.3s ease-in-out;
 }
+
+@keyframes memberListAnimation{ /*Kod för animation, från: http://www.w3schools.com/css/tryit.asp?filename=trycss3_animation1 */
+from {left: -20%;}
+to {left: 20%;}
+}
+
+@-webkit-keyframes memberListAnimation{ /* Safari and Chrome */
+from {left: -20%;}
+to {left: 20%;}
+}
+
 #xButton{
 	position: absolute;
 	right: 0px;
 	margin: 5px;
 	top: 0px;
+}
+
+#container {
+width: 20%;
+background-color: rgb(255, 124, 124);
+position: fixed;
+top: 0;
+height: 100%;
+border-right: black solid 1px;
+box-shadow: black 0px 0px 40px 10px;
+z-index: 10;
+}
+#container input {
+width: 100%;
+background-color: red;
+font-size: 1.1em;
+border-bottom: black 2px solid;
+border-top: black 2px solid;
+border-right: 0px;
+border-left: 0px;
+box-shadow: inset 0px 0px 29px -3px rgb(87, 0, 0);
+margin-bottom: 5px;
+}
+#container input:hover {
+background-color: rgb(175, 0, 0);
+cursor: pointer;
 }
